Supports serial inputs and XMODEM protocol.

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,7 @@ H8WRITE = $(PREFIX)/tools/kz_h8write
 H8WRITE_SERDEV = /dev/tty.usbserial-FTXPZO9L
 
 OBJS = vector.o startup.o main.o
-OBJS += lib.o serial.o
+OBJS += lib.o serial.o xmodem.o
 
 TARGET = kzload
 
