--- a/src/os/Makefile
+++ b/src/os/Makefile
@@ -14,7 +14,7 @@ OBJDUMP = $(BINDIR)/$(ADDNAME)objdump
 RANLIB  = $(BINDIR)/$(ADDNAME)ranlib
 STRIP   = $(BINDIR)/$(ADDNAME)strip
 
-OBJS = startup.o main.o
+OBJS = startup.o main.o interrupt.o
 OBJS += lib.o serial.o
 
 TARGET = kozos
@@ -28,6 +28,7 @@ LFLAGS = -static -T ld.scr -L.
 
 .SUFFIXES: .c .o
 .SUFFIXES: .s .o
+.SUFFIXES: .S .o
 
 all :		$(TARGET)
 $(TARGET) :	$(OBJS)
@@ -39,6 +40,9 @@ $(TARGET) :	$(OBJS)
 		$(CC) -c $(CFLAGS) $<
 
 .s.o :		$<
+		$(CC) -c $(CFLAGS) $<
+
+.S.o :		$<
 		$(CC) -c $(CFLAGS) $<
 
 load :		$(TARGET)
